# rust-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DDD_MODULE_GUIDE.md  Dockerfile  api_tests.http  docker-compose.yml  init_db.sh  init_schema.sql  publish-docker.sh  run-vps.sh
.sqlx/: query-0564c56bfe4b26fcdd716c87b88da186021276998705b4648c6ede1725fb9918.json  query-09cce5f556d12874898aef60c6e0c8d5e628f17743067f201a503a1cc755202b.json  query-0d55d95cff0968f62e852d9a9db216d52e4563ef5151bf501e138c6651cb4118.json  query-18f9744bcbadf1a125de53da4c3cb4b890e31a741755f8d1a76d510bbb7c46f0.json  query-1a049c63dc926dc9f4ea6c766e0d85afd88a2dcd48f3d5bf8277075e4286c1e2.json  query-1cb525fcf2f448dbfe56f90808e3f0dc98df3d1fa152cc4d1605ad1c26f978b7.json  query-1e34484c2989526a0930f4be0fbe794ac1f966cd2690e09d301b9b6971112e13.json  query-212c0b787b34fb054d3c0b19ea5db58517c8c19b09acdd6939a27ffa8a181f40.json  query-24cee7681a7e1a935029dc9ddb4768e51cb0360ebf2ca9843882b002069a6bb8.json  query-27c8478c1581a760ed47ced942cf363e248341fc8b52e07f0d841ea167cff351.json  query-2f880f1f2993b97b33be8bcb586c428c5c0cfb2f28e15ca9546d3e0fcb8cf2f4.json  query-325c34d5c846dd16443e20e10d33c6ca39a65c6654162cf6ba85cbbf3f50d536.json  query-371c20595a40f774ee08ed4e22cbcbaf1314b23133a13732d6f784c69bd961b5.json  query-3c05973896d532e877c16614d0750bb9cf19a5c217b1d38e56d0b8faf7c9c74f.json  query-3cc8acfdedac7947d1046675ca55451ffa9db84c59ded842218bd89c4110e4e9.json  query-3cf56ac38d52930276767587e4734b1a37976a9130cfb3ac43e76402f14554de.json  (+64 more)
migrations/: 1.init_database.sql  2.indexes.sql  3.seed.sql  seed.sql  (+1 more)
(+160 files in other folders)
