[package]
name = "rust_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
dotenvy = "0.15"
# SQLx
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
    "uuid",
] }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
bcrypt = "0.18.0"
jsonwebtoken = "10.3.0"
tower-http = { version = "0.6.8", features = ["cors"] }
